--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>About Us</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -99,22 +99,20 @@
               for sports injury prevention, rehabilitation, and performance
               optimization.
             </p>
-            <p>
+            <p id="moretext">
               Originally starting as a small clinic, we have expanded our
               services to include a wide range of specialties, from orthopedic
               surgery and physical therapy to sports nutrition and mental health
               support. Our team of dedicated doctors, trainers, and specialists
               work tirelessly to ensure that every athlete receives personalized
-              care tailored to their needs.
+              care tailored to their needs. Seven days a week, our
+              state-of-the-art facility offers a variety of programs, including
+              injury assessments, rehabilitation sessions, and performance
+              training. Whether you're a professional athlete or a fitness
+              enthusiast, our team is here to help you achieve your goals and
+              stay at the top of your game.
             </p>
-            <p>
-              Seven days a week, our state-of-the-art facility offers a variety
-              of programs, including injury assessments, rehabilitation
-              sessions, and performance training. Whether you're a professional
-              athlete or a fitness enthusiast, our team is here to help you
-              achieve your goals and stay at the top of your game.
-            </p>
-            <a href="#" class="btn btn-primary mt-3">Read More</a>
+            <a id="readmorebtn" class="btn btn-primary mt-3">Read More</a>
           </div>
         </div>
       </div>
