--- a/pages/services.html
+++ b/pages/services.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Services</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -29,39 +29,11 @@
     <!-- navbar-section -->
     <div id="navbar-container"></div>
 
-    <main class="container mt-5 pt-5">
-      <h1 class="text-center mb-5">Our Services</h1>
-
-      <!-- Services Accordion -->
-      <div class="accordion" id="servicesAccordion">
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button
-              class="accordion-button"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapseOne"
-            >
-              Injury Rehabilitation
-            </button>
-          </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show">
-            <div class="accordion-body">
-              <!-- Content -->
-            </div>
-          </div>
-        </div>
-        <!-- Add more accordion items -->
-      </div>
-
-      <!-- Training Plans Calculator -->
-      <div class="calculator mt-5 p-4 bg-light rounded">
-        <h3>Training Plan Calculator</h3>
-        <form id="trainingCalculator">
-          <!-- Form inputs -->
-        </form>
-      </div>
-    </main>
+    <!-- Our Approach section -->
+    <section class="posts section hidden">
+      <div class="container">
+        <h1 class="text-center my-5 fw-bold display-6">Our Approach</h1>
+        <p>Our sports rehabilitation program combines the latest techniques in physical therapy with personalized care tailored to your unique needs. We focus on a holistic approach that not only addresses the immediate injury but also improves overall performance and prevents future injuries. Our dedicated team of therapists and specialists work closely with you to develop a customized treatment plan that aligns with your goals and lifestyle.</p>
     <!-- footer -->
     <div id="footer-container"></div>
 
