update: now read more btn work all across pages

--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -99,7 +99,7 @@
               for sports injury prevention, rehabilitation, and performance
               optimization.
             </p>
-            <p id="moretext">
+            <p class="moretext">
               Originally starting as a small clinic, we have expanded our
               services to include a wide range of specialties, from orthopedic
               surgery and physical therapy to sports nutrition and mental health
@@ -112,7 +112,10 @@
               enthusiast, our team is here to help you achieve your goals and
               stay at the top of your game.
             </p>
-            <a id="readmorebtn" class="btn btn-primary mt-3">Read More</a>
+            <a class="readmorebtn btn btn-link">
+              Read more
+              <i class="fa-solid fa-arrow-right"></i>
+            </a>
           </div>
         </div>
       </div>
