--- a/pages/services.html
+++ b/pages/services.html
@@ -33,10 +33,29 @@
     <section class="posts section hidden">
       <div class="container">
         <h1 class="text-center my-5 fw-bold display-6">Our Approach</h1>
-        <p>Our sports rehabilitation program combines the latest techniques in physical therapy with personalized care tailored to your unique needs. We focus on a holistic approach that not only addresses the immediate injury but also improves overall performance and prevents future injuries. Our dedicated team of therapists and specialists work closely with you to develop a customized treatment plan that aligns with your goals and lifestyle.</p>
+        <p>
+          Our sports rehabilitation program combines the latest techniques in
+          physical therapy with personalized care tailored to your unique needs.
+          We focus on a holistic approach that not only addresses the immediate
+          injury but also improves overall performance and prevents future
+          injuries. Our dedicated team of therapists and specialists work
+          closely with you to develop a customized treatment plan that aligns
+          with your goals and lifestyle.
+        </p>
+      </div>
+    </section>
+
+    <!-- Services section -->
+    <section class="services section hidden">
+      <div class="container">
+        <h1 class="text-center my-5 fw-bold display-6">Our Services</h1>
+        <!-- Services Cards -->
+        <div id="servicesCards" class="row"></div>
+      </div>
+    </section>
+
     <!-- footer -->
     <div id="footer-container"></div>
-
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -49,7 +68,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="../scripts/general.js"></script>
     <script src="../scripts/services.js"></script>
+    <script src="../scripts/general.js"></script>
   </body>
 </html>
