update: code structure, move json data to another folder

--- a/pages/general/footer.html
+++ b/pages/general/footer.html
@@ -3,30 +3,30 @@
     <div class="container">
       <footer>
         <h1 class="text-center my-5">Astana Sport Medicine</h1>
-        <div class="footer-about-clinic">
+        <div class="footer-about-clinic text-white">
           <div class="contacts">
             <div class="footer-phone">
-              <h5 style="color: #fff">Contacts</h5>
-              <p>
+              <h5>Contacts</h5>
+              <p class="text-white">
                 +7 705 296 XX XX
                 <br />
                 +7 775 603 XX XX
               </p>
             </div>
             <div class="footer-email">
-              <h5 style="color: #fff">Email</h5>
-              <p>info@med.kz</p>
+              <h5>Email</h5>
+              <p class="text-white">info@med.kz</p>
             </div>
           </div>
           <div>
-            <h5 style="color: #fff">Opening Times:</h5>
+            <h5>Opening Times:</h5>
             <p></p>
-            <pre>Mo-Fr          07-22 o'clock</pre>
-            <pre>Saturday       10-16 o'clock</pre>
-            <pre>Sunday         10-17 o'clock</pre>
+            <pre class="text-white">Mo-Fr          07-22 o'clock</pre>
+            <pre class="text-white">Saturday       10-16 o'clock</pre>
+            <pre class="text-white">Sunday         10-17 o'clock</pre>
           </div>
           <div class="social">
-            <h5 style="color: #fff">Social Media:</h5>
+            <h5>Social Media:</h5>
             <div class="footer-social">
               <a href="https://www.instagram.com" target="_blank"
                 ><i class="fa-brands fa-instagram"></i
