--- a/pages/home.html
+++ b/pages/home.html
@@ -41,7 +41,7 @@
       <div class="hero-content">
         <div class="container">
           <h1 class="fw-bold display-2">Welcome to Astana Sport Medicine</h1>
-          <p class="display-6">
+          <p class="display-6 text-white">
             We are a team of professionals who are dedicated to providing the
             best care for our patients. Our goal is to help you recover faster
             and stay strong.
