--- a/pages/services.html
+++ b/pages/services.html
@@ -54,6 +54,15 @@
       </div>
     </section>
 
+    <!-- FAQ Section -->
+    <section class="faq section hidden">
+      <div class="container">
+        <h1 class="text-center my-5 fw-bold display-6">
+          Frequently Asked Questions
+        </h1>
+        <div class="accordion" id="faqContainer"></div>
+      </div>
+    </section>
     <!-- footer -->
     <div id="footer-container"></div>
 
